--- a/config/config.env
+++ b/config/config.env
@@ -3,6 +3,9 @@ PORT=5000
 
 MONGO_URI="mongodb+srv://bhanu:bhanu@cluster0.kgsem.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 
+FILE_UPLOAD_PATH= ./public/uploads
+MAX_FILE_UPLOAD=1000000
+
 
 JWT_SECRET=secret
 JWT_EXPIRE=30d
