--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-validator": "^6.12.0",
     "hpp": "^0.2.3",
